kubernetes/deployment-giropops.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: giropops-senhas
  namespace: giropops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: giropops-senhas
  template:
    metadata:
      labels:
        app: giropops-senhas
    spec:
      containers:
      - name: giropops-senhas
        image: bitmaqs/giropops-senhas
        ports:
        - containerPort: 5000
