kubernetes/service-giropops.yaml
apiVersion: v1
kind: Service
metadata:
  name: giropops-senhas
  namespace: giropops
spec:
  selector:
    app: giropops-senhas
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
  type: ClusterIP
