kubernetes/service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redisdb
  namespace: giropops
spec:
  selector:
    app: redisdb
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
  type: ClusterIP
