kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giropops-senhas
  namespace: giropops
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: giropops.localdev.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: giropops-senhas
                port:
                  number: 5000
